--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="explo">
             <h1 class="heading heading--h1 heading--h1--explo">Réservez le menu qui vous convient</h1>
             <p class="text text--search">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <div class="button button--explo"><a class="a a--explo" href="#resto" >Explorer nos restaurants</a></div>
+            <a class="a button button--explo text--button" href="#resto" >Explorer nos restaurants</a>
         </section>
 
 <!-- SECTION MAIN/FONCTION-->
@@ -62,21 +62,21 @@
             <h2 class="heading heading--h2 heading--h2--fonction">Fonctionnement</h2>
             <ul class="fonction__ul">
                 <li class="fonction__li fonction__li__first li">
-                    <div class="fonction__li__num">1</div>
+                    <div class="fonction__li__num text text--fonction">1</div>
                     <div class="fonction__li__div">
                         <img class="ico--fonction tel" src="Font_awesome/mobile-alt.svg" alt="Icone de telephone Ohmyfood"/>
                     </div>
                     <a href="" class="fonction__li__a a a--fonction">Choisissez un restaurant</a>
                 </li>
                 <li class="fonction__li li">
-                    <div class="fonction__li__num">2</div>
+                    <div class="fonction__li__num text text--fonction">2</div>
                     <div class="fonction__li__div">
                         <img class="ico--fonction list" src="Font_awesome/list-ul.svg" alt="Icone de liste Ohmyfood"/>
                     </div>
                     <a href="" class="fonction__li__a a a--fonction">Composez votre menu</a>
                 </li>
                 <li class="fonction__li li">
-                    <div class="fonction__li__num">3</div>
+                    <div class="fonction__li__num text text--fonction">3</div>
                     <div class="fonction__li__div">
                         <img class="ico--fonction store" src="Font_awesome/store.svg" alt="Icone de restaurant Ohmyfood"/>
                     </div>
@@ -95,7 +95,7 @@
                             <div class="nouveau text--nouveau">Nouveau</div>
                         </div>
                         <div class="resto__a__bottom">
-                                <h3 class="heading heading--h3">La palette du goût</h3>
+                                <h3 class="heading heading--h3 heading--h3--resto">La palette du goût</h3>
                                 <p class="text text--resto">Ménilmontant</p>
                                 <div class="resto__a__bottom__heart">
                                     <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
@@ -110,7 +110,7 @@
                             <div class="nouveau text--nouveau">Nouveau</div>
                         </div>
                         <div class="resto__a__bottom">
-                                <h3 class="heading heading--h3">La note enchantée</h3>
+                                <h3 class="heading heading--h3 heading--h3--resto">La note enchantée</h3>
                                 <p class="text text--resto">Charonne</p>
                                 <div class="resto__a__bottom__heart">
                                     <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
@@ -124,7 +124,7 @@
                         <div class="resto__a__top resto__a__top__3">
                         </div>
                         <div class="resto__a__bottom">
-                                <h3 class="heading heading--h3">À la française</h3>
+                                <h3 class="heading heading--h3 heading--h3--resto">À la française</h3>
                                 <p class="text text--resto">Cité rouge</p>
                                 <div class="resto__a__bottom__heart">
                                     <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
@@ -138,7 +138,7 @@
                         <div class="resto__a__top resto__a__top__4">
                         </div>
                         <div class="resto__a__bottom">
-                                <h3 class="heading heading--h3">Le délice des sens</h3>
+                                <h3 class="heading heading--h3 heading--h3--resto">Le délice des sens</h3>
                                 <p class="text text--resto">Folie-Méricourt</p>
                                 <div class="resto__a__bottom__heart">
                                     <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
@@ -154,7 +154,7 @@
 
 <!-- FOOTER -->
     <footer class="footer">
-        <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="footer__logo">
+        <p class="text text--footer">ohmyfood</p>
         <nav class="footer__nav">
             <ul class="footer__ul">
                 <li class="footer__li li">
