--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -178,14 +178,14 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <a class="a button button--commande" href="#resto" >Commander</a>
         </section>
 
     </main>
 
     <!-- FOOTER -->
     <footer class="footer">
-        <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="footer__logo">
+        <p class="text text--footer">ohmyfood</p>
         <nav class="footer__nav">
             <ul class="footer__ul">
                 <li class="footer__li li">
