Finalisation du projet derniere animation

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -45,10 +45,10 @@
             </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE--> 
-                <div class="carte carte-entrees">
+                <div class="carte carte--entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--entrees">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Ravioles de foie gras </h3>
                             <div class="text text--commande commande__li__detail">Accompagnés de leur crème à la truffe</div>  
                             <div class="commande__li__center">
@@ -61,7 +61,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Caviar osciètre</h3>
                             <div class="text text--commande commande__li__detail">Sur blini à la farine de blé noir</div>  
                             <div class="commande__li__center">
@@ -74,7 +74,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Homard et espuma de potiron</h3>
                             <div class="text text--commande commande__li__detail">Mariné aux zestes d'orange</div>  
                             <div class="commande__li__center">
@@ -86,7 +86,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard cuit entier</h3>
                             <div class="text text--commande commande__li__detail">Confiture de figue et pain toasté</div>  
                             <div class="commande__li__center">
@@ -102,10 +102,10 @@
                 </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->        
-                <div class="carte carte-plats">
+                <div class="carte carte--plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--plats">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Noix de coquilles Saint-Jacques</h3>
                             <div class="text text--commande commande__li__detail">Sur lit de purée de céleri-rave</div>  
                             <div class="commande__li__center">
@@ -118,7 +118,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Langoustine poêlée</h3>
                             <div class="text text--commande commande__li__detail">Purée de patate douce</div>  
                             <div class="commande__li__center">
@@ -131,7 +131,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Mijoté de queue de boeuf</h3>
                             <div class="text text--commande commande__li__detail">Et riz sauvage aux zestes de citron</div>  
                             <div class="commande__li__center">
@@ -147,10 +147,10 @@
                 </div> 
 
             <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->
-                <div class="carte carte-desserts">
+                <div class="carte carte--desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--desserts">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Macaron noisette et chocola</h3>
                             <div class="text text--commande commande__li__detail">Glace au caramel brun et sel de Guérande</div>  
                             <div class="commande__li__center">
@@ -163,7 +163,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Baba au rhum revisité</h3>
                             <div class="text text--commande commande__li__detail">Avec son coulis de citron</div>  
                             <div class="commande__li__center">
@@ -176,7 +176,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tarte au citron meringuée</h3>
                             <div class="text text--commande commande__li__detail">Déstructurée</div>  
                             <div class="commande__li__center">
