--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -45,10 +45,10 @@
             </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
-                <div class="carte carte-entrees">
+                <div class="carte carte--entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--entrees">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de poulpe acidulé</h3>
                             <div class="text text--commande commande__li__detail">Aux zestes d'orange</p>  
                             <div class="commande__li__center">
@@ -61,7 +61,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Velouté de légumes d'antan</h3>
                             <div class="text text--commande commande__li__detail">Carotte, panais, topinambour</div>  
                             <div class="commande__li__center">
@@ -74,7 +74,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Soupe à l'oignon</h3>
                             <div class="text text--commande commande__li__detail">Revisitée</div>  
                             <div class="commande__li__center">
@@ -90,10 +90,10 @@
                 </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                
-                <div class="carte carte-plats">
+                <div class="carte carte--plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--plats">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Coquilles Saint-Jacques</h3>
                             <div class="text text--commande commande__li__detail">Accompagnées d'une purée de panais</div>  
                             <div class="commande__li__center">
@@ -106,7 +106,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Magret de canard</h3>
                             <div class="text text--commande commande__li__detail">Et parmentier de pommes de terre</div>  
                             <div class="commande__li__center">
@@ -119,7 +119,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Pigeonneau d’Ille-et-Vilaine</h3>
                             <div class="text text--commande commande__li__detail">Sur son lit de gnocchis aux légumes</div>  
                             <div class="commande__li__center">
@@ -135,10 +135,10 @@
                 </div> 
 
             <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
-                <div class="carte carte-desserts">
+                <div class="carte carte--desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--desserts">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Pétales de violettes glacés</h3>
                             <div class="text text--commande commande__li__detail">Et purée de noisettes</div>  
                             <div class="commande__li__center">
@@ -151,7 +151,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Fondant au chocolat</h3>
                             <div class="text text--commande commande__li__detail">Revisité</div>  
                             <div class="commande__li__center">
@@ -164,7 +164,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Millefeuille croustillant</h3>
                             <div class="text text--commande commande__li__detail">Myrtilles et pâte d’amande</div>  
                             <div class="commande__li__center">
