--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -45,10 +45,10 @@
             </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
-                <div class="carte carte-entrees">
+                <div class="carte carte--entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--entrees">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Fricassée d'escargot</h3>
                             <div class="text text--commande commande__li__detail">Au piment d'espelette</div>  
                             <div class="commande__li__center">
@@ -61,7 +61,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard mi-cuit</h3>
                             <div class="text text--commande commande__li__detail">Et ses copeaux de truffe noire</div>  
                             <div class="commande__li__center">
@@ -74,7 +74,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Oeuf au plat</h3>
                             <div class="text text--commande commande__li__detail">Assaisonné à la truffe sur lit de caviar</div>  
                             <div class="commande__li__center">
@@ -90,10 +90,10 @@
                 </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                 
-                <div class="carte carte-plats">
+                <div class="carte carte--plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--plats">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Filet de boeuf aux herbes</h3>
                             <div class="text text--commande commande__li__detail">Accompagné de sa ribambelle de légumes</div>  
                             <div class="commande__li__center">
@@ -106,7 +106,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Parmentier de queue de boeuf</h3>
                             <div class="text text--commande commande__li__detail">À la truffe noire sur sa purée de panais</div>  
                             <div class="commande__li__center">
@@ -119,7 +119,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Filet de Turbot</h3>
                             <div class="text text--commande commande__li__detail">Aux agrumes</div>  
                             <div class="commande__li__center">
@@ -135,10 +135,10 @@
                 </div> 
 
             <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
-                <div class="carte carte-desserts">
+                <div class="carte carte--desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--desserts">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Paris-Brest</h3>
                             <div class="text text--commande commande__li__detail">Revisité</div>  
                             <div class="commande__li__center">
@@ -151,7 +151,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Macaron au chocolat d'exception</h3>
                             <div class="text text--commande commande__li__detail">Et glace à la vanille de Madagascar</div>  
                             <div class="commande__li__center">
@@ -164,7 +164,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Mousse au chocolat</h3>
                             <div class="text text--commande commande__li__detail">Au piment d'Espelette et à la truffe noire</div>  
                             <div class="commande__li__center">
