--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -45,10 +45,10 @@
             </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
-                <div class="carte carte-entrees">
+                <div class="carte carte--entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--entrees">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de thon</h3>
                             <div class="text text--commande commande__li__detail">Assaisonné au yuzu</div>  
                             <div class="commande__li__center">
@@ -61,7 +61,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Bouchée de homard croustillant</h3>
                             <div class="text text--commande commande__li__detail">Et sa farandole de petits légumes</div>  
                             <div class="commande__li__center">
@@ -74,7 +74,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Velouté de cèpes</h3>
                             <div class="text text--commande commande__li__detail">Aux truffes</div>  
                             <div class="commande__li__center">
@@ -90,10 +90,10 @@
                 </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                   
-                <div class="carte carte-plats">
+                <div class="carte carte--plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--plats">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Poulet rôti aux herbes de <br>Provence</h3>
                             <div class="text text--commande commande__li__detail">Et sa crème de truffe</div>  
                             <div class="commande__li__center">
@@ -106,7 +106,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Langouste rôtie</h3>
                             <div class="text text--commande commande__li__detail">Et ses légumes de saison</div>  
                             <div class="commande__li__center">
@@ -119,7 +119,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--plats li">
                             <h3 class="heading heading--h3 heading--h3--commande">Côte de boeuf Angus </h3>
                             <div class="text text--commande commande__li__detail">Et sa purée de panais</div>  
                             <div class="commande__li__center">
@@ -135,10 +135,10 @@
                 </div> 
 
             <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
-                <div class="carte carte-desserts">
+                <div class="carte carte--desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
-                    <ul class="commande__ul">
-                        <li class="commande__li li">
+                    <ul class="commande__ul commande__ul--desserts">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Farandole de desserts</h3>
                             <div class="text text--commande commande__li__detail">Du chef</div>  
                             <div class="commande__li__center">
@@ -151,7 +151,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Crème brulée</h3>
                             <div class="text text--commande commande__li__detail">Revisitée</div>  
                             <div class="commande__li__center">
@@ -164,7 +164,7 @@
                             </div>
                         </li>
 
-                        <li class="commande__li li">
+                        <li class="commande__li commande__li--desserts li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tiramisu</h3>
                             <div class="text text--commande commande__li__detail">À la noisette</div>  
                             <div class="commande__li__center">
