--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                 <h3 class="heading heading--h3 heading--h3--resto">La palette du goût</h3>
                                 <p class="text text--resto">Ménilmontant</p>
                                 <div class="resto__a__bottom__heart">
-                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
-                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--wide" src="Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>    
@@ -113,8 +113,8 @@
                                 <h3 class="heading heading--h3 heading--h3--resto">La note enchantée</h3>
                                 <p class="text text--resto">Charonne</p>
                                 <div class="resto__a__bottom__heart">
-                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
-                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--wide" src="Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>    
@@ -127,8 +127,8 @@
                                 <h3 class="heading heading--h3 heading--h3--resto">À la française</h3>
                                 <p class="text text--resto">Cité rouge</p>
                                 <div class="resto__a__bottom__heart">
-                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
-                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--wide" src="Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>   
@@ -141,8 +141,8 @@
                                 <h3 class="heading heading--h3 heading--h3--resto">Le délice des sens</h3>
                                 <p class="text text--resto">Folie-Méricourt</p>
                                 <div class="resto__a__bottom__heart">
-                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
-                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--wide" src="Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>  
