--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -40,8 +40,8 @@
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
             <div class="commande__divico">
-                <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
-                <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
+                <img class="heart--wide" src="Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
             </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
