--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -20,23 +20,23 @@
 
     <header class="header">
         <div class="header__logo">
-            <a class="header__logo__a" href="accueil.html">
+            <div class="header__logo__div">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <a href="index.html" class="header__arrow"><i class="fas fa-arrow-left a"></i></a>
-            </a>
+            </div>
         </div>
     </header>
 
-  <!-- SECTION MAIN--PALETTE -->
+  <!-- SECTION MAIN PALETTE -->
 
     <main class="main--palette">
 
- <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->           
-        <section class="platphoto">
+ <!-- SECTION MAIN PALETTE/ PLATPHOTO-->           
+        <div class="platphoto">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg" alt="Plat sur assiette du restaurant A la française pour commande repas Ohmyfood" class="platphoto__img platphoto__img--palette--francaise">
-        </section>
+        </div>
 
-<!-- SECTION MAIN--PALETTE/ COMMANDE-->       
+<!-- SECTION MAIN PALETTE/ COMMANDE-->       
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">À la française</h1>
             <div class="commande__divico">
@@ -44,13 +44,13 @@
                 <img class="heart--full" src="Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
             </div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
+        <!-- SECTION MAIN PALETTE/ COMMANDE/ CARTE-ENTREE-->            
                 <div class="carte carte--entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
                     <ul class="commande__ul commande__ul--entrees">
                         <li class="commande__li commande__li--entrees li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de poulpe acidulé</h3>
-                            <div class="text text--commande commande__li__detail">Aux zestes d'orange</p>  
+                            <div class="text text--commande commande__li__detail">Aux zestes d'orange</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
@@ -89,7 +89,7 @@
                     </ul>
                 </div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                
+        <!-- SECTION MAIN PALETTE/ COMMANDE/ CARTE-PLATS-->                
                 <div class="carte carte--plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
                     <ul class="commande__ul commande__ul--plats">
@@ -134,7 +134,7 @@
                     </ul>
                 </div> 
 
-            <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
+            <!-- SECTION MAIN PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
                 <div class="carte carte--desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
                     <ul class="commande__ul commande__ul--desserts">
@@ -171,7 +171,7 @@
                                 <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
-                                <diclass="commande__li__right__cont">
+                                <div class="commande__li__right__cont">
                                     <i class="fas fa-check"></i>
                                 </div>
                             </div>
