--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="header">
         <div class="header__logo">
-            <a class="header__logo__a" href="index.html">
+            <div class="header__logo__div">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <div class="local">
                     <div>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="a text--local">Paris, Belleville</div>
                 </div>
-            </a>
+            </div>
         </div>
     </header>
 
