Coorection bugs validations html css W3C

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -22,8 +22,8 @@
         <div class="header__logo">
             <div class="header__logo__div">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
-                <a href="index.html" class="header__arrow"><i class="fas fa-arrow-left a"></i></a>
             </div>
+            <a href="index.html" class="header__arrow"><i class="fas fa-arrow-left a"></i></a>
         </div>
     </header>
 
@@ -151,7 +151,7 @@
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
                     <ul class="commande__ul commande__ul--desserts">
                         <li class="commande__li commande__li--desserts li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Macaron noisette et chocola</h3>
+                            <h3 class="heading heading--h3 heading--h3--commande">Macaron noisette et chocolat</h3>
                             <div class="text text--commande commande__li__detail">Glace au caramel brun et sel de Guérande</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
