--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Damien Will">
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.min.css">
     <script src="https://kit.fontawesome.com/4080d911bd.js" crossorigin="anonymous"></script>
 
 </head>
@@ -21,13 +21,14 @@
     <header class="header">
         <div class="header__logo">
             <div class="header__logo__div">
-                <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
+                <img src="css/images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <div class="local">
                     <div>
                         <img src="Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
                     </div>
                     <div class="a text--local">Paris, Belleville</div>
                 </div>
+                <div class="background"></div>
             </div>
         </div>
     </header>
@@ -40,7 +41,7 @@
 
 <div class="loader">
     <div class="loader__logo">
-        <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="loader__logo__img"/>
+        <img src="css/images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="loader__logo__img"/>
     </div>
     <div class="loader__progress">
         <div class="loader__progress__barre">  
@@ -50,7 +51,6 @@
 </div>
 
 <!-- SECTION MAIN/EXPLO-->
-        <div class="background"></div>
         <section class="explo">
             <h1 class="heading heading--h1 heading--h1--explo">Réservez le menu qui vous convient</h1>
             <p class="text text--search">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
