--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="header__logo">
             <div class="header__logo__div">
-                <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
+                <img src="css/images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
             </div>
             <a href="index.html" class="header__arrow"><i class="fas fa-arrow-left a"></i></a>
         </div>
@@ -33,7 +33,7 @@
         
  <!-- SECTION MAIN PALETTE/ PLATPHOTO-->     
         <div class="platphoto">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur assiette du restaurant La note enchantée pour commande repas Ohmyfood" class="platphoto__img platphoto__img--note">
+            <img src="css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur assiette du restaurant La note enchantée pour commande repas Ohmyfood" class="platphoto__img platphoto__img--note">
         </div>
 
 <!-- SECTION MAIN PALETTE/ COMMANDE--> 
