--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="header__logo">
             <div class="header__logo__div">
-                <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
+                <img src="css/images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
             </div>
             <a href="index.html" class="header__arrow"><i class="fas fa-arrow-left a"></i></a>
         </div>
@@ -33,7 +33,7 @@
 
 <!-- SECTION MAIN PALETTE/ PLATPHOTO-->         
         <div class="platphoto">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img platphoto__img--delice">
+            <img src="css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img platphoto__img--delice">
         </div>
 
 <!-- SECTION MAIN PALETTE/ COMMANDE-->         
