--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Damien Will">
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.min.css"> 
+    <link rel="stylesheet" type="text/css" href="css/main.css"> 
     <script src="https://kit.fontawesome.com/4080d911bd.js" crossorigin="anonymous"></script>
 
 </head>
