--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Damien Will">
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://kit.fontawesome.com/4080d911bd.js" crossorigin="anonymous"></script>
 
 </head>
@@ -21,11 +21,9 @@
     <header class="header">
         <div class="header__logo">
             <div class="header__logo__div">
-                <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
+                <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img header__logo__img--accueil"/>
                 <div class="local">
-                    <div>
-                        <img src="Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
-                    </div>
+                     <img src="Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
                     <div class="a text--local">Paris, Belleville</div>
                 </div>
             </div>
@@ -153,7 +151,7 @@
     </main>
 
 <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer footer--accueil">
         <p class="text text--footer">ohmyfood</p>
         <nav class="footer__nav">
             <ul class="footer__ul">
